[gd_scene load_steps=7 format=3 uid="uid://cewfw1jekcbh3"]

[ext_resource type="Texture2D" uid="uid://egxfp52mas7w" path="res://asset/item.png" id="1_hvkyt"]
[ext_resource type="Script" path="res://scene/ui/card_panel.gd" id="1_rehsl"]
[ext_resource type="Texture2D" uid="uid://diuksjp56bueg" path="res://asset/card_panel_2.png" id="3_vbdce"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vt8xh"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xyr6"]
atlas = ExtResource("1_hvkyt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_21f4j"]
texture = ExtResource("3_vbdce")

[node name="CardPanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(128, 128)
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vt8xh")
script = ExtResource("1_rehsl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_8xyr6")

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_21f4j")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
